--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,12 @@ spring:
         git:
           uri: https://github.com/kjgleh/msa-config-repository.git
 
+# eureka 설정 추가
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka
+
+
